# YouTubeLiveStreamer

./: CMakeLists.txt  Config.h  README.md  ReStreamer.cpp  ReStreamer.h  live-streamer.conf.sample  main.cpp
snap/: snapcraft.yaml
snap/hooks/: install
